+ Jungle Tycoon + Ocean Tycoon + Mesa Tycoon + Concrete Tycoon + Wool Tycoon + Deepslate Tycoon + End Tycoon + Tycoons stop spawning when no players are in a world # fixed tycoon resource bug